--- a/learn-certs-pr/courses/ai-100t01.yml
+++ b/learn-certs-pr/courses/ai-100t01.yml
@@ -30,10 +30,20 @@ summary: |-
   #### Zielgruppenprofil
   Der Kurs ist für Cloud Service Architekten, Designern von Künstlicher Intelligenz in Azure und AI&#58; Developer ausgerichtet.
 prerequisitesSection: |-
-  Vor Teilnahme an disesem Kurs benötigen die Teilnehmer&#58;
-  - Azure Grundlagen
-  - Verständnis von Azure-storage Technologien
-  - C# Verständnis
+  Erfolgreiche Azure AI-Ingenieure beginnen diese Rolle mit Berufserfahrung in Cloud-Technologien und Erfahrung mit Softwareentwicklungskits.
+
+  Insbesondere&#58;
+  - Implementieren von Lösungen in C# oder Python
+  - Anwendungsentwicklung in der Cloud
+  - Grundlegendes zu Azure-Speichertechnologien
+
+  Um diese erforderlichen Fähigkeiten zu erwerben, nehmen Sie bitte an der folgenden kostenlosen Online-Schulung teil, bevor Sie den Kurs besuchen&#58;
+  - [Microsoft Azure-Cloud-Konzepte erkunden](/learn/paths/explore-microsoft-azure-cloud-concepts/)
+  - [Machen Sie Ihre ersten Schritte mit C#](/learn/paths/csharp-first-steps/) oder [Machen Sie Ihre ersten Schritte mit Python](/learn/paths/python-first-steps/)
+  - [Core Cloud Services - Einführung in Azure](/learn/modules/welcome-to-azure/)
+  - [Core Cloud Services - Azure-Berechnungsoptionen](/learn/modules/intro-to-azure-compute/)  
+
+  Wenn Sie mit Azure AI-Services noch nicht vertraut sind, absolvieren Sie zunächst[Microsoft Azure AI Fundamentals](/learn/certifications/azure-ai-fundamentals).
 outlineSection: |-
   ### Modul 1&#58; Einführung in Azure-cognitive-services
   Der Teilnehmer wird etwas über die cognitive-services von Microsoft Azure und ihre Rolle in der Bildung von KI-Lösungen lernen.
