--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -11,7 +11,7 @@ iconUrl: /media/learn/certification/course.svg
 skillsGained:
 - skill: Allgemeine Cloud-Computing-Konzepte verstehen
 - skill: Grundlegendes zu den in Microsoft Azure verfügbaren Services verstehen
-- skill: Verständnis über Sicherheit, Datenschutz, Compliance, sowie Vertrauen in Microsoft Azure
+- skill: Verstehen von Sicherheit, Datenschutz, Compliance und Vertrauen Microsoft Azure
 - skill: Preisgestaltung und Support-Modelle verstehen, die bei Microsoft verfügbar sind
 learningPartnersLink: https://www.microsoft.com/learning/partners.aspx
 locales:
@@ -39,13 +39,13 @@ summary: |-
   #### Zielgruppenprofil
   Dieser Kurs eignet sich für Programmmanager und technischen Vertrieb mit allgemeinem IT-Hintergrund. Diese Schüler möchten mehr über unsere Angebote erfahren, sehen, wie Komponenten implementiert werden, und Fragen zu Produkten und Funktionen stellen. Dieser Kurs bietet keinen Azure-Pass oder Zeit im Klassenzimmer, damit die Studenten praktische Aktivitäten ausführen können. Die Studenten können eine kostenlose Testversion erhalten und die Komplettlösungen außerhalb des Unterrichts durchführen. Dieser Kurs besteht hauptsächlich aus Vorlesungen und Demonstrationen. Dieser Kurs hilft dabei, jemanden auf die AZ-900-Prüfung vorzubereiten.
 prerequisitesSection: |-
-  Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
+  Es gibt keine Voraussetzungen für die Teilnahme an diesem Kurs. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
 outlineSection: |-
   ### Modul 1&#58; Cloud-Konzepte
   In diesem Modul lernen Sie grundlegende Cloud-Konzepte.
   #### Lektionen
   - Lernziele
-  Warum Cloud-Services?
+  - Warum Cloud-Services?
   - Infrastructure-as-a-Service (IaaS), Platform-as-a-Service (PaaS) , und Software-as-a-Service (SaaS)
   - Öffentliche, private und hybride Cloud-Modelle
 
