--- a/learn-certs-pr/courses/dp-050t00.yml
+++ b/learn-certs-pr/courses/dp-050t00.yml
@@ -30,8 +30,15 @@ summary: |-
   Die Zielgruppe für diesen Kurs sind Datenprofis und Datenarchitekten, die etwas über die Migration von Datenplattformtechnologien lernen wollen, die auf Microsoft Azure existieren, und wie bestehende SQL-basierte Workloads migriert und modernisiert werden können.
   Die zweite Zielgruppe für diesen Kurs sind Individuelle Teilnehmer die Datenplattformen verwalten und Anwendungen, die Inhalt von bestehenden Plattformtechnologien liefern, erstellen.
 prerequisitesSection: |-
-  Zusätzlich zu Berufserfahrung mit SQL Servern sollten die Teilnehmer über technisches Wissen, das den folgenden Kursen entspricht, verfügen&#58;
-  - Azure fundamentals
+  Erfolgreiche Studenten beginnen diese Rolle mit grundlegenden Kenntnissen über Cloud-Computing-Konzepte und Berufserfahrung bei der Implementierung von SQL-Lösungen.
+
+  Insbesondere&#58;
+  - Arbeiten mit und Verwalten von SQL-Workloads
+  - Erfahrung mit Azure, z. B. Bereitstellen und Verwalten von Ressourcen
+
+  Um diese Fähigkeiten zu erwerben, absolvieren Sie die folgende kostenlose Online-Schulung, bevor Sie an dem Kurs teilnehmen&#58; 
+  - [Einführung in Azure SQL](/learn/modules/azure-sql-intro/)
+  - [Azure-Grundlagen](/learn/certifications/azure-fundamentals)
 outlineSection: |-
   ### Modul 1&#58; Einführung in Data Platform Modernisierung
   In diesem Modul lernen die Teilnehmer den Zweck der Datenplattformmodernisierung kennen und legen die Vorteuke der Datenplattformmodernisierunt für eine Organisation fest. Die Teilnehmer lernen die verschiedenen Stufen einer Datenplattform Migration kennen um zu verstehen, was in jedem Teil wichtig ist um die Chancen auf Erfolg der Data Platform Modernisierungsprojekte zu maximieren. Letztendlich erkunden die Teilnehmer die verschieden Datenübertragunswege um zu verstehen, dass jeder Ansatz unterschiedlich ist und warum manche besser geeignet sind als andere.
