--- a/learn-certs-pr/courses/dp-100t01.yml
+++ b/learn-certs-pr/courses/dp-100t01.yml
@@ -26,10 +26,18 @@ summary: |-
   #### Zielgruppenprofil
   Dieser Kurs richtet sich an Datenwissenschaftler und Personen mit erheblicher Verantwortung für die Ausbildung und den Einsatz von Machine Learning.
 prerequisitesSection: |-
-  Vor Teilnahme an disesem Kurs benötigen die Teilnehmer&#58;
-  - Earned [Azure Fundamentals certification](https://docs.microsoft.com/learn/certifications/azure-fundamentals).
-  - Verständnis von Data Science, Vorbereitung von Daten, trainingsmodellen und der Evaluation von verschiedenen Modellen um das besten auszuwählen.
-  - Wie mit der Python Programmiersprache programmiert wird und die Python Bibliotheken genutzt werden&#58; pandas, scikit-learn, matplotlib, und seaborn.
+  Erfolgreiche Azure Data Scientists beginnen diese Rolle mit einem grundlegenden Wissen über Cloud-Computing-Konzepte und Erfahrung in allgemeinen Datenwissenschaften- und maschinellen Lernwerkzeugen und -techniken.
+
+  Insbesondere&#58; 
+  - Erstellen von Cloud-Ressourcen in Microsoft Azure.
+  - Verwenden von Python zum Erkunden und Visualisieren von Daten.
+  - Schulung und Validierung von Modellen für maschinelles Lernen unter Verwendung gängiger Frameworks wie Scikit-Learn, PyTorch und TensorFlow.
+
+  Um diese erforderlichen Fähigkeiten zu erwerben, absolvieren Sie die folgende kostenlose Online-Schulung, bevor Sie an dem Kurs teilnehmen&#58; 
+  - [Microsoft Cloud-Konzepte erkunden](/learn/paths/explore-microsoft-azure-cloud-concepts/).
+  - [Modelle für maschinelles Lernen erstellen](/learn/paths/create-machine-learn-models/). 
+
+  Wenn Sie mit Datenwissenschaft und maschinellem Lernen noch nicht vertraut sind, schließen Sie bitte zuerst [Microsoft Azure AI-Fundamentals](/learn/certifications/azure-ai-fundamentals) ab.
 outlineSection: |-
   ### Modul 1&#58; Data Science in Azure
   Der Teilnehmer lernt etwas über die Data Science Prozesse und die Rolle des Datenwissenschaftler.  Dies wird dann darauf angewendet, die Azure Services, die Data Science Prozesse unterstützen und ergänzen, zu verstehen
