--- a/learn-certs-pr/courses/dp-200t01.yml
+++ b/learn-certs-pr/courses/dp-200t01.yml
@@ -37,8 +37,18 @@ summary: |-
   #### Zielgruppenprofil
   Die primäre Zielgruppe für diesen Kurs sind Datenexperten, Datenarchitekten und Business Intelligence-Experten, die sich über die Datenplattformtechnologien, die auf Microsoft Azure existieren, informieren möchten. Die sekundäre Zielgruppe für diesen Kurs sind Personen, die Anwendungen entwickeln, die Inhalte aus den Datenplattformtechnologien, die auf Microsoft Azure existieren, bereitstellen.
 prerequisitesSection: |-
-  Zusätzlich zu ihrer Beruflichen Erfahrun sollten die Teilnehmer des Kurses technische Kenntnisse, die mit folgenden Kursen übereinstimmen, besitzen&#58;
-  - [Azure Fundamentals](https://docs.microsoft.com/learn/modules/welcome-to-azure/)
+  Erfolgreiche Studenten beginnen diesen Kurs mit Kenntnissen über Cloud-Computing-Konzepte und Berufserfahrung mit Datenlösungen.
+
+  Insbesondere&#58;
+  - Erstellen von Cloud-Ressourcen in Microsoft Azure
+  - Identifizieren von Anwendungsfällen für Big Data
+  - Verstehen, wie Cloud-Computing-Services die allgemeinen Geschäftsanforderungen erfüllen können
+
+  Um diese erforderlichen Fähigkeiten zu erwerben, absolvieren Sie die folgende kostenlose Online-Schulung, bevor Sie an dem Kurs teilnehmen&#58; 
+  - [Microsoft Cloud-Konzepte erkunden](/learn/paths/explore-microsoft-azure-cloud-concepts/)
+  - [Aufgaben eines Dateningenieurs identifizieren](/learn/modules/data-engineering-processes/)
+  - [Kern-Cloud-Services - Azure-Datenspeicheroptionen](/learn/modules/intro-to-data-in-azure/)
+  - [Kern-Cloud-Services - Azure-Rechenoptionen](/learn/modules/intro-to-azure-compute/)
 outlineSection: |-
   ### Modul 1&#58; Azure für den Data Engineer
   In diesem Modul wird  die Entwicklungen in der Welt der Daten untersucht und wie die Technologien der Cloud-Datenplattformen den Unternehmen neue Möglichkeiten bieten, ihre Daten auf unterschiedliche Weise zu erkunden Die Teilnehmer erhalten einen Überblick über die verschiedenen verfügbaren Datenplattformtechnologien und wie sich die Rolle und die Verantwortlichkeiten eines Datentechnikers entwickelt haben, um in dieser neuen Welt zum Nutzen einer Organisation zu arbeiten.
