--- a/learn-certs-pr/courses/dp-201t01.yml
+++ b/learn-certs-pr/courses/dp-201t01.yml
@@ -35,9 +35,18 @@ summary: |-
   #### Zielgruppenprofil
   Die Zielgruppe für diesen Kurs sind Datenexperten, Data Architects und Business Intelligence Experten, die eetwas über die Microsoft Azure Data Platform Technologien lernen möchten. Die sekundäre Zielgruppe für diesen Kurs sind Personen, die Anwendungen entwickeln, die Inhalte aus den Datenplattformtechnologien liefern, die auf Microsoft Azure existieren.
 prerequisitesSection: |-
-  Zusätzlich zu ihrer Beruflichen Erfahrun sollten die Teilnehmer des Kurses technische Kenntnisse, die mit folgenden Kursen übereinstimmen, besitzen&#58;
-  - [Azure Fundamentals](https://docs.microsoft.com/learn/modules/welcome-to-azure/)
-  - DP-200 Implementierung einer Azure-Datenlösung
+  Erfolgreiche Studenten beginnen diesen Kurs mit Kenntnissen über Cloud-Computing-Konzepte und Berufserfahrung mit Datenlösungen.
+
+  Insbesondere&#58; 
+  - Erstellen von Cloud-Ressourcen in Microsoft Azure
+  - Identifizieren von Anwendungsfällen für Big Data
+  - Verstehen, wie Cloud-Computing-Services die allgemeinen Geschäftsanforderungen erfüllen können
+
+  Um diese erforderlichen Fähigkeiten zu erwerben, absolvieren Sie die folgende kostenlose Online-Schulung, bevor Sie an dem Kurs teilnehmen&#58; 
+  - [Microsoft Cloud-Konzepte erkunden](/learn/paths/explore-microsoft-azure-cloud-concepts/)
+  - [Aufgaben eines Dateningenieurs identifizieren](/learn/modules/data-engineering-processes/)
+  - [Kern-Cloud-Services - Azure-Datenspeicheroptionen](/learn/modules/intro-to-data-in-azure/)
+  - [Kern-Cloud-Services - Azure-Rechenoptionen](/learn/modules/intro-to-azure-compute/)
 outlineSection: |-
   ### Modul 1&#58; Data Platform Architecture Considerations
   In diesem Modul werden die Teilnehmer lernen, wie man sichere, skalierbare und performant Lösungen in Azure entwirft und baut, indem sie die Kernprinzipien untersuchen, die in jeder guten Architektur zu finden sind. Sie werden lernen, wie die Anwendung von Schlüsselprinzipien in der gesamten Architektur, unabhängig von der Wahl der Technologie, Ihnen dabei helfen kann, die Architektur zu entwerfen, zu bauen und kontinuierlich zum Nutzen des Unternehmens zu verbessern.
@@ -47,7 +56,7 @@ outlineSection: |-
   - Leistung und Skalierbarkeit
   - Design für Verfügbarkeit und Wiederherstellung
   - Design für Effizienz und operationen
-  Fallstudien
+  - Fallstudien
 
 
   #### Labor&#58; Fallstudien
@@ -68,20 +77,20 @@ outlineSection: |-
   #### Lektionen
   - Lambda Architektur für Batch Mode Perspective
   - Enterprise BI Solutions in Azure erstellen
-  -  Enterprise BI Solutions in azure automatisieren
+  - Enterprise BI Solutions in azure automatisieren
   - Enterprise-grade Konversationsbot in Azure bauen
 
 
   #### Labor&#58; Architect an Enterprise-grade Conversational Bot in Azure
-  -  Enterprise BI Solutions in Azure erstellen
-  -  Enterprise BI Solutions in azure automatisieren
-  -  Enterprise BI Solutions in azure automatisieren
+  - Enterprise BI Solutions in Azure erstellen
+  - Enterprise BI Solutions in azure automatisieren
+  - Enterprise BI Solutions in azure automatisieren
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
-  -Prinzipien der Architekturerstellung verstehen
+  - Prinzipien der Architekturerstellung verstehen
   - Lambda Architektur für Batch Mode Perspective beschreiben
   - Enterprise BI Solutions in Azure erstellen
-  -  Enterprise BI Solutions in azure automatisieren
+  - Enterprise BI Solutions in azure automatisieren
   - Enterprise-grade Konversationsbot in Azure bauen
 
 
@@ -136,7 +145,7 @@ outlineSection: |-
   #### Lektionen
   - Workload Kapazität durch Skaling anpassen
   - Netzwerkleistung optimieren
-  Optimierte Speicher und Datenbankleistung erstellen
+  - Optimierte Speicher und Datenbankleistung erstellen
   - Leistungs Bottlenecks identifizieren
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
@@ -145,14 +154,14 @@ outlineSection: |-
 
   #### Labor&#58; Designing for Resiliency and Scale
   - Workload Kapazität durch Skaling anpassen
-  Optimierte Speicher und Datenbankleistung erstellen
+  - Optimierte Speicher und Datenbankleistung erstellen
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
 
   Nach Abschluss dieses Moduls können die Teilnehmer&#58;
   - Workload Kapazität durch Skaling anpassen
   - Netzwerkleistung optimieren
-  Optimierte Speicher und Datenbankleistung erstellen
+  - Optimierte Speicher und Datenbankleistung erstellen
   - Leistungs Bottlenecks identifizieren
   - Hochverfügbarkeitslösung erstellen
   - Disaster Recover in Architekturen einbauen
