--- a/learn-certs-pr/courses/dp-900t00.yml
+++ b/learn-certs-pr/courses/dp-900t00.yml
@@ -29,6 +29,13 @@ summary: |-
 
   #### Zielgruppenprofil
   Die Teilnehmer an diesem Kurs sind Personen, die die Grundlagen von Datenbankkonzepten in einer Cloud-Umgebung erlernen, grundlegende Kenntnisse in Cloud-Daten-Services erwerben und ihr grundlegendes Wissen über Cloud-Daten-Services in Microsoft Azure aufbauen möchten.
+prerequisitesSection: |-
+  Der Besuch dieses Kurses setzt keine Zertifizierung voraus. Erfolgreiche Azure Data Fundamentals-Studenten beginnen mit einem grundlegenden Bewusstsein für Computer- und Internetkonzepte und einem Interesse daran, Erkenntnisse aus Daten zu gewinnen.
+
+  Insbesondere&#58;
+  - Erfahrung mit einem Webbrowser wie [Microsoft Edge](https://support.microsoft.com/microsoft-edge?ocid=DMC-End-User-Support&ui).
+  - Vertrautheit mit grundlegenden datenbezogenen Konzepten, z. B. Arbeiten mit Datentabellen in einer Tabelle und Visualisieren von Daten mit Hilfe von Diagrammen.
+  - Lernbereitschaft durch praktische Erforschung.
 outlineSection: |-
   ### Modul 1&#58; Untersuchen Sie die wichtigsten Datenkonzepte
   Die Teilnehmer lernen die Grundlagen von Datenbankkonzepten in einer Cloud-Umgebung kennen, erhalten grundlegende Kenntnisse in Cloud-Datendiensten und bauen ihre grundlegenden Kenntnisse über Cloud-Datendienste in Microsoft Azure auf. Die Teilnehmer identifizieren und beschreiben Kerndatenkonzepte wie relationale, nicht-relationale, Big Data und Analysen und untersuchen, wie man diese Technologie in Microsoft Azure implementieren kann. Die Schüler lernen die Rollen, Aufgaben und Verantwortlichkeiten in der Datenwelt kennen.
