--- a/learn-certs-pr/courses/mb-700t00.yml
+++ b/learn-certs-pr/courses/mb-700t00.yml
@@ -43,7 +43,7 @@ outlineSection: |-
   - Kurze Wiederholung des Lernpfades für Lösungsarchitekten
   - Gruppenübung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - das durch Online-Inhalte erworbene Wissen für Lösungsarchitekten zu wiederholen
   - die für einen Lösungsarchitekten erforderlichen Fähigkeiten aufzulisten
 
@@ -67,7 +67,7 @@ outlineSection: |-
   - Infrastruktur & Einsatz
   - Gruppenübung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - den Zweck der Umweltplanung zu verstehen
   - die Unterschiede zwischen den verschiedenen verwalteten Umgebungen zu kennen
   - jede der anfänglichen Infrastrukturanforderungen zu erklären
@@ -78,17 +78,17 @@ outlineSection: |-
   ### Modul 3&#58; Cloud-Lösung, CDM & CDS
   Zu den Themen und Konzepten in diesem Modul gehören&#58; 
 
-  CDM- und CDS-Kernkonzepte  
-  Erläuterungen zu diesen Technologien zur gemeinsamen Nutzung von Daten. 
+  CDM- und CDS-Kernkonzepte
+  Erläuterungen zu diesen Technologien für den Datenaustausch.
 
-  CDM vs. CDS  
-  Eine kurze Diskussion darüber, wie diese Technologien zusammenwirken und sich gegenseitig ergänzen. 
+  CDM vs. CDS
+  Eine kurze Diskussion darüber, wie diese Technologien interagieren und sich ergänzen.
 
-  Power Platform 
-  In diesem Thema werden einige der Komponenten von Power Platform, der Geschäftsanwendungsplattform von Microsoft, untersucht. 
+  Power Platform
+  Bei diesem Thema werden einige Komponenten von Power Platform, der Microsoft Business Anwendungsplattform, erläutert.
 
-  Duales Schreiben  
-  Eine kurze Erläuterung einer neuen bidirektionalen Integrationsfunktionalität, die Microsoft 2019 vorgestellt hat.   
+  Dual Write
+  Eine kurze Erläuterung einer neuen bidirektionalen Integrationsfunktion, die Microsoft 2019 vorgestellt hat.   
   #### Einheiten
   - Einführung
   - CDM- und CDS-Kernkonzepte
@@ -96,7 +96,7 @@ outlineSection: |-
   - Duales Schreiben
   - Gruppen-Übung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - Gespräch mit Kunden über die Bedeutung von CDM zu führen
   - die Funktionalität, die der Common Data Service (CDS) bietet zu besprechen
   - die Microsoft Power Platform und ihre Hauptkomponenten zu erklären
@@ -120,7 +120,7 @@ outlineSection: |-
   - AppSource
   - Unterstützung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein 
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - die verschiedenen Möglichkeiten, wie die Abonnements für Lizenzen erhalten werden können zu diskutieren
   - zu bestimmen, ob ein ISV eine vorhandene Lösung registrieren lassen könnte
   - die Schritte zu beschreiben, die erforderlich sind, um die Unterstützungsstrategie zum Abschluss zu bringen und die Bereitschaft zur Aufnahme des Betriebs zu beurteilen
@@ -143,7 +143,7 @@ outlineSection: |-
   - Verstehen der Rolle und Funktion von Azure DevOps und wie man sich mit LCS verbindet
   - Gruppenübung
   
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein 
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - die Funktionalität von fünf oder mehr Werkzeugen und/oder Funktionen, die von LCS zur Verfügung gestellt werden zu erklären
   - den Nutzen die Synchronisierung eines Business Process Modelers (BPM) zu erklären
   - die Rolle und Funktion von Azure DevOps bei der Verbindung zum LCS zu beschreiben
@@ -162,7 +162,7 @@ outlineSection: |-
   - Einen Lösungsentwurf entwickeln
   - FastTrack in die Überprüfung des Lösungsentwurfs einbeziehen
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein 
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58; 
   - mit einem Kunden ein Gespräch über die Vorteile der Beauftragung eines FastTrack-Architekten oder -Teams zu führen
   - die Vorteile eines Vergleichs und einer Bewertung der funktionalen Anforderungen durch das Projektteam zu beschreiben
   - die verschiedenen Architekturformen, die bei der Erstellung eines Lösungsentwurfs beteiligt sind zu erklären und zu diskutieren
@@ -188,7 +188,7 @@ outlineSection: |-
   - Wichtige Überlegungen
   - Gruppenübung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - Fragen zu artikulieren, die ein Lösungsarchitekt bei der Identifizierung von Datenqualitätsproblemen stellen muss
   - Fragen zu erklären, die ein Lösungsarchitekt vor der Datenmigration stellen muss
   - die erforderlichen Qualifikationen für den Datenmigrationsplan zu beschreiben
@@ -217,7 +217,7 @@ outlineSection: |-
   - Endpunkte
   - Gruppenübung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - die Unterschiede und Ähnlichkeiten zwischen Integration und Datenmigration zu beschreiben
   - Unterscheidung und Artikulation der Unterschiede zwischen Schnittstelle und Integrationen
   - die gemeinsamen Plattformen und Tools, die zur Umsetzung der Integrationsstrategie zur Verfügung stehen auszuwählen
@@ -241,7 +241,7 @@ outlineSection: |-
   - Berichterstattung
   - Gruppenübung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - den Bedarf an ISV-Lösungsanbietern zu diskutieren
   - die vier gemeinsamen Frameworks für Prüfung und Einhaltung von Vorschriften zu beschreiben
   - Einhaltungsempfehlungen zu erläutern
@@ -271,7 +271,7 @@ outlineSection: |-
   - Optionen der Erweiterbarkeit
   - Anträge auf Erweiterbarkeit
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - die Vorteile der Erweiterbarkeit zu erklären
   - den Unterschied zwischen Überlagerung und Erweiterbarkeit zu besprechen
   - die verfügbaren gemeinsamen Erweiterungsoptionen zu diskutieren
@@ -298,7 +298,7 @@ outlineSection: |-
   - Sicherheitskonzept
   - Werkzeuge und Funktionen
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein 
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58; 
   - die vier primären Sicherheitsanforderungen, auf die sich Lösungsarchitekten beim Entwurf konzentrieren sollten zu diskutieren
   - die aktuellen Angebote von Microsoft zum Kundenschutz zu identifizieren und zu erklären
   - Überlegungen zu Authentifizierung, Autorisierung, Datensicherheit und Auditierung zu erörtern
@@ -328,7 +328,7 @@ outlineSection: |-
   - Leistungstests und Tools
   - Gruppenübung
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein 
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58; 
   - die Auswirkungen klar definierter Benchmarks zu erläutern
   - die Auswirkungen der Rolle des Lösungsarchitekten beim Sammeln von Systemleistungsanforderungen zu erklären
   - die wichtigsten Überlegungen zum Leistungsdesign in Bezug auf Skalierbarkeit, Gleichzeitigkeit und Reaktionszeit zu diskutieren
@@ -358,7 +358,7 @@ outlineSection: |-
   - Build
   - Deployment
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - zu diskutieren, wie der Einsatz von DevOps zur Synchronisierung von Geschäftsprozessen beiträgt
   - die primären Vorteile der Versionskontrolle zu erklären
   - zentrale Konzepte und Überlegungen zur Entwicklung zu erörtern
@@ -382,7 +382,7 @@ outlineSection: |-
   - Einführung
   - Die Testoptionen verstehen
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - die Auswirkungen der Rolle des Lösungsarchitekten beim Sammeln von Systemleistungsanforderungen zu erläutern
   - die verschiedenen Elemente und Überlegungen, die bei der Entwicklung einer Teststrategie eine Rolle spielen zu erklären
   - die verfügbaren Kundenoptionen für die Verwendung von Testlösungen zu beschreiben
@@ -407,7 +407,7 @@ outlineSection: |-
   - Drucken von Szenarien in Dynamics 365
   - High-Level Implementierungsphasen 
 
-  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein
+  Nach Abschluss dieses Moduls sollten die TeilnehmerInnen in der Lage sein&#58;
   - Überlegungen zur Größe von Anhängen und Datenbanken anzustellen
   - die Konzepte für Dokumentendruck und Druckmanagement für Dynamics 365 zu erklären
   - die High-Level-Schritte des Upgrade-Prozesses zu erklären
