--- a/learn-certs-pr/courses/mb-901t00.yml
+++ b/learn-certs-pr/courses/mb-901t00.yml
@@ -31,8 +31,8 @@ exams:
 summary: |-
   Dieser Kurs bietet den Teilnehmern einen breiten Überblick über die Anwendungen von Dynamics 365. Wir stellen Ihnen jede der Anwendungen vor, erläutern ihren Geschäftswert und diskutieren und demonstrieren die Kernfunktionen. Wir werden die Sicherheit und das Berichtswesen von Dynamics 365 behandeln und Sie mit den verfügbaren Daten- und Produktintegrationen vertraut machen.
 
-  #### Zielgruppenprofil
-  Dieser Kurs richtet sich an Lernende, die solide Grundkenntnisse in den Grundlagen von Dynamics 365 erwerben möchten.
+  #### Publikumsprofil
+  Dieser Kurs richtet sich an Teilnehmer, die solide Grundkenntnisse in den Grundlagen von Dynamics 365 erwerben möchten.
 prerequisitesSection: |-
   Keine
 outlineSection: |-
@@ -83,7 +83,7 @@ outlineSection: |-
   - Verwalten Sie den Verkaufsprozess und die Pipeline
   - Vorteile der Microsoft Relationship Sales-Lösung (MRSS)
   - Dynamik 365 Sales Insights - Einblicke
-  - Microsoft Forms Pro
+  - Dynamics 365 Customer Voice
   - Dynamics 365-Produktvisualisierung
   - Summary
 
@@ -97,8 +97,7 @@ outlineSection: |-
   - Erläutern Sie, wie Sie den Verkaufsprozess in Dynamics 365 Sales verwalten können
   - Entdecken Sie die Microsoft Relationship Sales Solution (MRSS)
   - Erklären Sie den Geschäftswert von Dynamiocs 365 Sales Insights
-  - Erklären Sie den Geschäftswert von Microsoft Forms Pro
-
+  - Erläutern Sie den Geschäftswert von Dynamics 365 Customer Voice
 
   ### Modul 4&#58; Einführung in die Dynamik 365 Marketing
   In diesem Modul stellen wir Ihnen Dynamics 365 Marketing vor und zeigen Ihnen, wie Dynamics 365 Marketing Ihnen hilft, die richtigen Kundenkontakte zu finden und zu pflegen. Sie können Multi-Channel-Marketingkampagnen durchführen, um die richtigen Interessenten anzuziehen. Das bedeutet E-Mail, Web, Veranstaltungen, Textnachrichten und benutzerdefinierte Kanäle.
