--- a/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-developer-associate.yml
@@ -15,7 +15,7 @@ levels:
 skills:
 - Verwendung gängiger Funktionen und Tools zur Implementierung
 - Konfigurieren von Sicherheit, Prozessen und Optionen
-- Durchführen der Datenmigration
+- Finanz- und Betriebsdaten verwalten 
 - Überprüfung und Support der Lösung
 - Planen der Architektur und Lösungsentwicklung
 - Entwickler-Tools anwenden
