--- a/learn-certs-pr/d365-functional-consultant-financials.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials.yml
@@ -15,12 +15,12 @@ levels:
 skills:
 - Verwendung gängiger Funktionen und Tools zur Implementierung
 - Konfigurieren von Sicherheit, Prozessen und Optionen
-- Durchführen der Datenmigration
+- Verwalten von Finanz- und Betriebsdaten
 - Überprüfung und Support der Lösung
 - Einrichten und Konfigurieren des Finanzmanagements
-- Verwaltung und Anwendung gemeinsamer Prozesse
-- Implementieren und Verwalten von Kreditoren und Debitoren
-- Verwaltung von Budgetierung und Anlagevermögen
+- Implementieren und verwalten von Verbindlichkeiten und Ausgaben
+- Implementieren von Forderungen, Krediten, Inkasso und Umsatzrealisierung
+- Budgetierung und Anlagevermögen verwalten
 roles:
 - functional-consultant
 type: role-based
