--- a/learn-certs-pr/d365-functional-consultant-manufacturing.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing.yml
@@ -15,11 +15,12 @@ levels:
 skills:
 - Verwendung gängiger Funktionen und Tools zur Implementierung
 - Konfigurieren von Sicherheit, Prozessen und Optionen
-- Durchführen der Datenmigration
+- Verwalten von Finanz- und Betriebsdaten
 - Überprüfung und Support der Lösung
-- Einrichtung und Konfiguration der Fertigung
-- Erstellung und Verwaltung von Produktions- und Lean-Aufträgen
-- Erstellen, Bearbeiten und Verwalten von Produktionschargenaufträgen
+- Dynamics 365 Supply Chain Management und Fertigung konfigurieren
+- Herstellungsprozesse verwalten
+- Masterplanung für die Produktion implementieren
+- Andere Fertigungsfunktionen implementieren
 roles:
 - functional-consultant
 type: role-based
