--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -24,11 +24,11 @@ skills:
 - Konfigurieren von Marketinganwendungen
 - Segmente und Listen verwalten
 - Marketingformulare und Seiten erstellen und verwalten
-- Leads verwalten
+- Leads, Kontakte und Konten verwalten
 - Erstellen und Verwalten von Marketing-E-Mails
 - Kunden-Journeys verwalten
 - Verwaltung von Veranstaltungen und Webinaren
-- Konfigurieren und Analysieren von Kundenreaktionen
+- Dynamics 365 Customer Voice konfigurieren
 roles:
 - functional-consultant
 type: role-based
