--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management.yml
@@ -15,12 +15,13 @@ levels:
 skills:
 - Verwendung gängiger Funktionen und Tools zur Implementierung
 - Konfigurieren von Sicherheit, Prozessen und Optionen
-- Durchführen der Datenmigration
+- Verwalten von Finanz- und Betriebsdaten
 - Überprüfung und Support der Lösung
 - Implementieren des Produktinformationsmanagements
 - Implementieren der Bestandsführung
-- Implementieren und Verwalten von Lieferkettenprozessen
-- Implementieren von Lagerverwaltung und Transportmanagement und Durchführung von Geschäftsprozessen
+- Implementieren und verwalten von Supply-Chain-Prozessen
+- Implementieren der Lagerverwaltung und des Transportmanagements
+- Masterplanung implementieren
 roles:
 - functional-consultant
 type: role-based
