--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -8,7 +8,7 @@ displayName: AZ-900
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Die Veröffentlichung der neuen OD-Prüfung, Prüfung und der entsprechenden Schulung wurde vom 15. September 2020 auf Anfang November verschoben. Bitte versuchen Sie erneut, weitere Informationen zu erhalten. Wir sind uns sicher, dass Sie mindestens 30 Tage im Voraus Bescheid wissen, bevor wir die neue Version der Prüfung veröffentlichen. </strong><br/><br/></div> 
+  <div><strong>Der Inhalt dieser Prüfung wird am 9. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div> 
   </div>
   
   Kandidaten für dieses examens sollten über grundlegende Kenntnisse der Cloud-Dienste und der Bereitstellung dieser Dienste mit Microsoft Azure verfügen. Die Prüfung richtet sich an Kandidaten, die gerade erst mit Cloud-basierten Lösungen und Services arbeiten oder neu in Azure sind.
@@ -38,6 +38,7 @@ locales:
 levels:
 - beginner
 skills:
+- Der Inhalt dieser Prüfung wird am 9. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
 - Cloud-Konzepte beschreiben (15-20%)
 - Beschreiben der Azure-Kern-Services (30-35%)
 - Sicherheit, Datenschutz, Compliance und Vertrauen beschreiben (25-30%)
