--- a/learn-certs-pr/exams/dp-100.yml
+++ b/learn-certs-pr/exams/dp-100.yml
@@ -8,7 +8,7 @@ displayName: DP-100
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am Freitag, 22. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 8. Dezember 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Azure Data Scientists wenden ihre Kenntnisse in Datenwissenschaften und maschinellem Lernen an, um Workloads für maschinelles Lernen in Azure zu implementieren und auszuführen, insbesondere mit Hilfe des Azure Machine Learning Service. Dies umfasst das Planen und Erstellen einer geeigneten Arbeitsumgebung für datenwissenschaftliche Workloads in Azure, das Ausführen von Datenexperimenten und das Trainieren von Vorhersagemodellen, das Verwalten und Optimieren von Modellen sowie das Bereitstellen von Modellen für maschinelles Lernen in der Produktion.
@@ -25,7 +25,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am Freitag, 22. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 8. Dezember 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
 - Einrichten eines Azure-Arbeitsbereichs für maschinelles Lernen (30-35%)
 - Experimente durchführen und Modelle trainieren (25-30%)
 - Modelle optimieren und verwalten (20-25%)
