--- a/learn-certs-pr/exams/mb-300.yml
+++ b/learn-certs-pr/exams/mb-300.yml
@@ -8,16 +8,16 @@ displayName: MB-300
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 16. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wurde am 16. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren. Kandidaten dienen als Schlüsselressource bei der Implementieren und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
+  Kandidaten für diese Prüfung sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren.
   <br/>
 
-  Die Kandidaten für dieses examens verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement.
+  Kandidaten dienen als Schlüsselressource bei der Implementierung und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen. Kandidaten verstehen die allgemeinen Merkmale und Funktionen von Finanz- und Betriebsanwendungen sowie deren Konfiguration und Verwendung. Sie sollten auch wissen, wie sich Finanz- und Betriebsanwendungen in externe Systeme und Tools einschließlich Power Platform integrieren lassen. Der Kandidat verwaltet Anwendungslebenszyklen aktiv mit Hilfe von Lifecycle Services (LCS) und anderen Microsoft-Tools und -Plattformen.
 
-  Die Kandidaten für dieses examens spezialisieren sich in der Regel auf einen oder mehrere Funktionsbereiche von Microsoft Dynamics 365 Finance and Operations, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
-subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Verwendung gängiger Funktionalitäten und Implementierenswerkzeuge, Konfiguration von Sicherheit, Prozessen und Optionen, Durchführung von Datenmigrationen sowie Validierung und Support der Lösung.'
+  Kandidaten für diese Prüfung sind in der Regel auf einen oder mehrere Funktionssätze von Finanz- und Betriebsanwendungen spezialisiert, darunter Finanzen, Fertigung und Lieferkettenmanagement.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Verwenden Sie allgemeine Funktionen und Implementierungstools. Sicherheit, Prozesse und Optionen konfigurieren; Finanz- und Betriebsdaten verwalten; und validieren und unterstützen Sie die Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8B
 practiceTestUrl: https://www.mindhub.com/p/MU-MB-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -28,10 +28,10 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 16. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Verwendung gängiger Funktionen und Tools zur Implementierung (20-25%)
-- Konfigurieren von Sicherheit, Prozessen und Optionen (45-50%)
-- Durchführen der Datenmigration (15-20%)
+- Der Inhalt dieser Prüfung wurde am 16. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Verwenden Sie gängige Tools zur Funktionalität und Implementierung (15-20%).
+- Konfigurieren Sie Sicherheit, Prozesse und Optionen (30-35%)
+- Verwalten von Finanz- und Betriebsdaten (25-30%)
 - Überprüfung und Support der Lösung (15-20%)
 roles:
 - functional-consultant
