--- a/learn-certs-pr/exams/mb-320.yml
+++ b/learn-certs-pr/exams/mb-320.yml
@@ -8,19 +8,19 @@ displayName: MB-320
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 16. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wurde am 16. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren. Kandidaten dienen als Schlüsselressource bei der Implementieren und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
+  Kandidaten für diese Prüfung sind funktionale Berater, die Geschäftsanforderungen analysieren und diese in vollständig realisierte Geschäftsprozesse und Lösungen umsetzen, die branchenspezifische Best Practices implementieren. Kandidaten dienen als Schlüsselressource bei der Implementierung und Konfiguration von Anwendungen zur Erfüllung der Geschäftsanforderungen.
   <br/>
 
   Die Kandidaten für dieses examens verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement.
   <br/>
 
-  Die Kandidaten für dieses examens spezialisieren sich in der Regel auf einen oder mehrere Funktionsbereiche von Microsoft Dynamics 365 Finance, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
+  Kandidaten für diese Prüfung sind in der Regel auf einen oder mehrere Funktionssätze von Finanz- und Betriebsanwendungen spezialisiert, darunter Finanzen, Fertigung und Lieferkettenmanagement.
 
-  Die Kandidaten müssen über Kenntnisse der grundlegenden Rechnungslegungsgrundsätze und -praktiken verfügen.
-subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Einrichtung und Konfiguration der Fertigung, Erstellung und Verwaltung von Produktions- und Lean-Aufträgen sowie Erstellung, Bearbeitung und Verwaltung von Produktionschargenaufträgen.'
+  Die Kandidaten müssen über Kenntnisse der Herstellungspraktiken verfügen.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Konfigurieren von Dynamics 365 Supply Chain Management, Fertigung; Herstellungsprozesse verwalten; Masterplanung für die Produktion implementieren; und andere Fertigungsmerkmale implementieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVs
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-320&examname=Exam%20MB-320:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Manufacturing&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-320
@@ -29,10 +29,11 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 16. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Einrichtung und Konfiguration der Fertigung (30-35%)
-- Erstellung und Verwaltung von Produktions- und Lean-Aufträgen (25-30%)
-- Erstellen, Bearbeiten und Verwalten von Produktionschargenaufträgen (40-45%)
+- Der Inhalt dieser Prüfung wurde am 16. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Konfigurieren des Dynamics 365 Supply Chain Managements, Fertigung (35-40%)
+- Verwalten von Herstellungsprozessen (20-25%)
+- Masterplanung für die Produktion umsetzen (10-15%)
+- Andere Fertigungsmerkmale implementieren (15-20%) 
 roles:
 - functional-consultant
 products:
@@ -53,7 +54,7 @@ relatedCertifications:
 resources:
 - title: Lernpfad zur Zertifizirung
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcRH
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBE
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
