--- a/learn-certs-pr/microsoft-certified-educator.yml
+++ b/learn-certs-pr/microsoft-certified-educator.yml
@@ -33,13 +33,13 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4vHl
 exams:
 - uid: exam.62-193
 resources:
-- title: Forschungsprojekt"Innovatives Lehren und Lernen" (ITL)
-  description: Forschungsprojekt"Innovatives Lehren und Lernen" (ITL)
-  href: https://education.microsoft.com/GetTrained/ITL-Research
+- title: Microsoft Center für Pädagogen
+  description: Schulungen, Programme und Ressourcen für Pädagogen.
+  href: https://education.microsoft.com/de-de
 - title: Studienführer
   description: Trainingsunterlagen zur Prüfungsvorbereitung
-  href: http://aka.ms/MCEStudyGuide
+  href: https://aka.ms/MCEStudyGuide
 - title: Exam Replay
   description: Digitalkit für die Teach the Future Now Kampagne (Poster, Datenblatt und MCE-Prüfungsziel-Domain)
-  href: http://aka.ms/MCEAssets
+  href: https://aka.ms/MCEAssets
 
