--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -28,8 +28,8 @@
 - name: Prüfungsrichtlinien und FAQs
   expanded: false
   items:
-  - name: Prüfungsprozessübersicht
-    href: exam-process-overview.md
+  - name: Häufig gestellte Fragen
+    href: frequently-asked-questions.md  
   - name: Prüfungssicherheitsrichtlinie und Prüfungswiederholungsrichtlinie
     href: exam-security-policy-and-exam-retake-policy.md
   - name: Prüfungsverschiebungs- und Stornierungsbedingungen
