--- a/learn-certs-pr/courses/ai-900t00.yml
+++ b/learn-certs-pr/courses/ai-900t00.yml
@@ -47,7 +47,12 @@ summary: |-
   #### Zielgruppenprofil
   Der Azure AI Fundamentals-Kurs richtet sich an alle, die mehr über die Arten einer möglichen Lösung durch künstliche Intelligenz (AI) und die Services in Microsoft Azure erfahren möchten, mit denen man sie erstellen kann. Sie müssen für die Teilnahme an diesem Kurs keine Erfahrung mit Microsoft Azure haben, Es wird jedoch vorausgesetzt, dass Sie mit Computertechnologie und dem Internet vertraut sind. Einige der im Kurs behandelten Konzepte erfordern ein grundlegendes Verständnis der Mathematik, beispielsweise die Fähigkeit, Diagramme zu interpretieren. Der Kurs beinhaltet praktische Aktivitäten, bei denen mit Daten gearbeitet und Code ausgeführt wird. Daher sind Kenntnisse der grundlegenden Programmierprinzipien hilfreich.
 prerequisitesSection: |-
-  Kenntnisse von Computern und der Verwendung eines Webbrowsers.
+  Der Besuch dieses Kurses setzt keine Zertifizierung voraus. Erfolgreiche Teilnehmer am Kurs Azure AI-Fundamentals beginnen mit einigen grundlegenden Kenntnissen über Computer- und Internetkonzepte und einem Interesse an der Verwendung von Azure AI-Services.
+
+  Insbesondere&#58;
+  - Erfahrung mit Computern und dem Internet.
+  - Interesse an Anwendungsfällen für KI-Anwendungen und Modelle für maschinelles Lernen.
+  - Lernbereitschaft durch praktische Erforschung.
 outlineSection: |-
   ### Modul 1&#58; Einführung in AI
   In diesem Modul lernen Sie die gängigen Anwendungen der künstlichen Intelligenz (AI) und die verschiedenen Arten der mit AI verbundenen Workload kennen. Anschließend werden Überlegungen und Prinzipien für eine verantwortungsvolle AI-Entwicklung untersucht.
