--- a/learn-certs-pr/courses/az-900t00.yml
+++ b/learn-certs-pr/courses/az-900t00.yml
@@ -26,118 +26,109 @@ products:
 exams:
 - uid: exam.az-900
 summary: |-
-  Dieser zweitägige Kurs vermittelt grundlegende Kenntnisse über Cloud-Konzepte. Azure-Kerndienste; Sicherheit, Datenschutz, Compliance und Vertrauen; und Azure-Preise und -Support.
+  Dieser zweitägige Kurs vermittelt grundlegende Kenntnisse über die wichtigsten Azure-Konzepte. Azure-Kernservices; Kernlösungen und Management-Tools; allgemeine Sicherheit und Netzwerksicherheit; Governance-, Datenschutz- und Compliance-Funktionen; Azure-Kostenmanagement- und Servicevereinbarungen.
   Hinweis&#58; Dieser Kurs bietet einen Azure-Pass und Zeit für die Teilnahme an praktischen Übungen. Wenn Sie keine praktische Erfahrung benötigen, sollten Sie den Kurs AZ -900T01&#58; Microsoft Azure Fundamentals (1 Tag) in Betracht ziehen. Der Inhalt für beide Kurse richtet sich nach der Zieldomäne der AZ-900-Prüfung.
 
   #### Zielgruppenprofil
   Dieser Kurs eignet sich für IT-Mitarbeiter, die gerade erst mit Azure arbeiten. Dieses Publikum möchte mehr über unsere Angebote erfahren und praktische Erfahrungen mit dem Produkt sammeln. Dieser Kurs verwendet hauptsächlich das Azure-Portal zum Erstellen von Diensten und erfordert keine Skriptkenntnisse.  Die Teilnehmer dieses Kurses gewinnen Vertrauen in andere rollenbasierte Kurse und Zertifizierungen, z. B. Azure Administrator. Dieser Kurs bietet einen Azure-Pass und eine optionale Laborumgebung. Dieser Kurs kombiniert Vorlesungen, Demonstrationen und praktische Übungen.  Dieser Kurs hilft auch dabei, jemanden auf die AZ-900-Prüfung vorzubereiten.
 prerequisitesSection: |-
-  Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Allerdings ist die
-  Technisches Wissen Ein Schüler hat umso mehr Verständnis für die Cloud.
+  Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Allerdings ist die technisches Wissen Ein Schüler hat umso mehr Verständnis für die Cloud.
 outlineSection: |-
-  ### Modul 1&#58; Cloud-Konzepte
-  In diesem Modul lernen Sie Cloud-Dienste, die Arten von Cloud-Modellen und die Arten von Cloud-Diensten kennen.
+  ### Modul 1&#58; Beschreiben der wichtigsten Azure-Konzepte
+  In diesem Modul erhalten Sie einen umfassenden Einblick in Azure und seine Funktionen, der Ihnen eine solide Grundlage für die Vervollständigung der verfügbaren Module für Azure Fundamentals bietet.
   #### Lektionen
-  - Warum Cloud Services
-  - Arten von Cloud-Modellen
-  - Typen von Cloud-Dienstleistungen
+  - Einführung in die Azure-Grundlagen
+  - Erläutern Sie grundlegende Azure-Konzepte
+  - Beschreiben der wichtigsten Azure-Architekturkomponenten
 
-  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Definieren Sie Cloud Computing und seine wichtigsten Vorteile.
-  - Erläutern Öffentliche, private und hybride Cloud-Modelle
-  - Erläutern Sie die Cloud-Dienste IaaS, PaaS und SaaS.
+  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
+  - Grundlegendes zu den Vorteilen von Cloud Computing in Azure und wie Sie Zeit und Geld sparen können
+  - Erläutern von Konzepten wie Hochverfügbarkeit, Skalierbarkeit, Elastizität, Agilität und Notfallwiederherstellung
+  - Beschreiben der wichtigsten Azure-Architekturkomponenten wie Abonnements, Verwaltungsgruppen, Ressourcen und
+  - Geografische Verteilungskonzepte wie Azure-Regionen, Regionspaare und Verfügbarkeitszonen zusammenfassen
 
 
-  ### Modul 2&#58; Core Azure Services
-  In diesem Modul Mehr erfahren über Azure-Kernkomponenten der Cloud-Architektur, Azure-Dienste und -Produkte, Azure-Lösungen und Azure-Verwaltungstools.
+  ### Modul 2&#58; Beschreiben der Azure-Kernservices
+  In diesem Modul erfahren Sie mehr über Azure-Kernservices wie Azure-Datenbank, Azure-Computing, Azure-Speicher und Azure-Netzwerk.
   #### Lektionen
-  - die wichtigsten Azure-Architekturkomponenten
-  - die wichtigsten Azure Dienste und Produkte
-  - Azure Solutions
-  - Azure management tools
+  - Erkunden Sie die Azure-Datenbank- und Analyseservices
+  - Erkunden Sie die Azure-Rechenservices
+  - Erkunden Sie die Azure-Speicherservices
+  - Erkunden Sie die Azure-Netzwerkservices
 
+  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
+  - Verstehen Sie die Breite der in Azure verfügbaren Services, einschließlich Computer, Netzwerk, Speicher und Daten
+  - Identifizieren Sie Virtualisierungs-Services wie Azure Virtual Machines, Azure Container Instances und Azure Ku
+  - Vergleichen Sie die Azure-Datenbankservices wie Azure Cosmos DB, Azure SQL, Azure-Datenbank für MySQL und Azur
+  - Untersuchen Sie Azure-Netzwerkressourcen wie virtuelle Netzwerke, VPN-Gateways und Azure ExpressRoute
+  - Fassen Sie Azure-Speicherservices wie Azure Blob-Speicher, Azure-Festplattenspeicher und Azure-Dateispeicher zusammen
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine virtuelle Maschine
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Bereitstellen von Azure-Containerinstanzen
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie ein virtuelles Netzwerk
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie einen Blob-Speicher
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine SQL-Datenbank
-
-  #### Labor &#58; Waltkthrough&#58; Implementieren Sie einen Azure IoT Hub
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Implementieren Sie Azure-Funktionen
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine Web-App
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine VM mit einer Vorlage
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine VM mit PowerShell
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine VM mit CLI
-  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Identifizieren Sie die wichtigsten Azure-Architekturkomponenten wie Regionen, Regionen und Ressourcengruppen.
-  - Identifizieren Sie Anwendungsfälle für Azure-Kerndienste und -Produkte, z. B. virtuelle Maschinen und Speicher.
-  - Identifizieren Sie Anwendungsfälle für Azure-Lösungen wie das Internet der Dinge und maschinelles Lernen.
-  - Identifizieren Sie, welche Azure-Verwaltungstools verfügbar sind, z. B. Azure PowerShell und die CLI.
-
-
-  ### Modul 3&#58; Sicherheit, datenschutz, Compliance und Vertrauen
-  In diesem Modul Mehr erfahren über Azure-Sicherheit, Identität, Governance, Überwachung, Berichterstellung und Standards.
+  ### Modul 3&#58; Kernlösungen und Verwaltungstools in Azure beschreiben
+  In diesem Modul lernen Sie das maschinelle Lernen von KI, Azure DevOps, die Grundlagen der Überwachung, die Grundlagen der Verwaltung, die Grundlagen des serverlosen Computing und IoT-Grundlagen kennen.
   #### Lektionen
-  - Sichere Netzwerkverbindung
-  - Kern-Azure Identity Services
-  - Sicherheitstools und -Funktionen
-  - Azure Governance Methodologies
-  - Überwachung und Berichterstattung
-  - Datenschutz-, Compliance- und Datenschutzstandards
+  - Wählen Sie den besten KI-Service für Ihre Bedürfnisse
+  - Wählen Sie die besten Tools aus, mit denen Unternehmen bessere Lösungen entwickeln können
+  - Wählen Sie den besten Überwachungsservice für Sichtbarkeit, Einblick und Ausfallminderung
+  - Wählen Sie die besten Tools zum Verwalten und Konfigurieren Ihrer Azure-Umgebung aus
+  - Wählen Sie die beste servierlose Azure-Technologie für Ihr Geschäftsszenario
+  - Wählen Sie den besten Azure IoT-Service für Ihre Anwendung aus
 
+  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
+  - Wählen Sie den richtigen Azure Service für künstliche Intelligenz aus, um verschiedene Arten geschäftlicher Herausforderungen zu lösen
+  - Wählen Sie die besten Tools und Services für den Softwareentwicklungsprozess für ein bestimmtes Geschäftsszenario aus.
+  - Wählen Sie den richtigen Cloud-Überwachungsservice, um verschiedene geschäftliche Herausforderungen zu bewältigen.
+  - Wählen Sie das richtige Azure-Verwaltungstool aus, um verschiedene technische Anforderungen und Herausforderungen zu erfüllen
+  - Wählen Sie die richtige serverlose Computertechnologie für Ihr Geschäftsszenario.
+  - Wählen Sie den besten Azure IoT-Service für ein bestimmtes Geschäftsszenario aus.
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Sicherer Netzwerkverkehr
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Implementieren Sie den Azure-Schlüsseldepot
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erstellen Sie eine Azure-Richtlinie
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Verwalten Sie den Zugriff mit RBAC
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Verwalten Sie Ressourcensperren
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Implementieren Sie das Ressourcen-Tagging
-
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Erkunden des Trust Centers
-  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Beschreiben von Konnektivitätsoptionen für die Sicherheit virtueller Netzwerke, z. B. Netzwerksicherheitsgruppen.
-  - Beschreiben der Azure-Identitätsauthentifizierungs- und Autorisierungsoptionen.
-  - Beschreiben von Anwendungsfällen für die Optionen Security Center, Key Vault, Threat und Informationsschutz
-  - Beschreiben der Azure-Richtlinien und der rollenbasierten Zugriffssteuerung.
-  - Beschreiben von Anwendungsfällen für Azure Monitor und Azure Service Health.
-  - Beschreiben von Datenschutz-, Compliance- und Datenschutzstandards.
-
-
-  ### Modul 4&#58; Azure-Preise, Service Level Agreements (SLAs) und Lebenszyklus
-  In diesem Modul erfahren Sie mehr über Azure-Abonnements, das Planen und Verwalten von Kosten, Supportoptionen, SLAs und Servicelebenszyklen.
+  ### Modul 4&#58; Beschreiben der allgemeinen Sicherheits- und Netzwerksicherheitsfunktionen
+  In diesem Modul erfahren Sie, wie Sie sich vor Sicherheitsbedrohungen schützen und Ihre Netzwerke mit Azure schützen können.
   #### Lektionen
-  - Azure Abos
-  - Kostenplanung und Verwaltung
-  - Azure Service Level Agreements (SLAs)
-  - Service Lifecycle in Azure
+  - Schützen Sie Azure vor Sicherheitsbedrohungen
+  - Sichere Netzwerkverbindung in Azure
 
+  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
+  - Stärken Sie Ihre Sicherheitslage und schützen Sie sich mit Hilfe des Azure Security Centers vor Bedrohungen.
+  - Sammeln und verarbeiten Sie Sicherheitsdaten aus vielen verschiedenen Quellen mit Hilfe von Azure Sentinel.
+  - Verwalten Sie dedizierte physische Server zum Hosten Ihrer Azure-VMs für Windows und Linux, mit Hilfe von Azure Dedica
+  - Identifizieren Sie die Ebenen, aus denen sich eine Strategie der Tiefenverteidigung zusammensetzt.
+  - Erläutern Sie, wie Sie mit der Azure-Firewall steuern können, welcher Datenverkehr im Netzwerk zulässig ist.
+  - Konfigurieren Sie Netzwerksicherheitsgruppen, um den Netzwerkverkehr zu und von Azure-Ressourcen in einem Mikrofon zu filtern
+  - Erläutern Sie, wie Azure DDoS Protection Ihre Azure-Ressourcen vor DDoS-Angriffen schützt.
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Verwenden Sie den Azure-Preisrechner
+  ### Modul 5&#58; Beschreiben von Identitäts-, Governance-, Datenschutz- und Compliance-Funktionen
+  In diesem Modul erfahren Sie mehr über Azure-Identitätsservices, das Erstellen einer Cloud-Governance-Strategie sowie Datenschutz-, Compliance- und Datenschutzstandards für Azure.
+  #### Lektionen
+  - Sicherer Zugriff auf Ihre Anwendungen mit Hilfe von Azure-Identitätsservices
+  - Erstellen Sie eine Cloud-Governance-Strategie für Azure
+  - Überprüfen Sie die Datenschutz-, Compliance- und Datenschutzstandards in Azure
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Verwenden Sie den Azure TCO-Rechner
+  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
+  - Erläutern Sie den Unterschied zwischen Authentifizierung und Autorisierung.
+  - Beschreiben, wie Azure Active Directory die Identitäts- und Zugriffsverwaltung bereitstellt.
+  - Erläutern Sie die Rolle von Single Sign-On (SSO), Multifaktorauthentifizierung und bedingtem Zugriff.
+  - Treffen Sie mit Hilfe von CAF für Azure organisatorische Entscheidungen über Ihre Cloud-Umgebung.
+  - Definieren Sie mit Hilfe der rollenbasierten Azure-Zugriffssteuerung, wer auf Cloud-Ressourcen zugreifen kann.
+  - Wenden Sie eine Ressourcensperre an, um ein versehentliches Löschen Ihrer Azure-Ressourcen zu verhindern.
+  - Wenden Sie Tags für Ihre Azure-Ressourcen an, um deren Zweck zu beschreiben.
+  - Steuern und überwachen Sie, wie Ihre Ressourcen mit Hilfe der Azure-Richtlinie erstellt werden.
+  - Aktivieren Sie die Governance über mehrere Azure-Abonnements hinweg, mit Hilfe von Azure Blaupausen.
+  - Erläutern Sie die Arten von Compliance-Angeboten, die in Azure verfügbar sind.
+  - Erhalten Sie Einblick in gesetzliche Standards und Compliance in Azure.
+  - Erläutern Sie die für Regierungsbehörden spezifischen Azure-Funktionen.
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Berechnen Sie zusammengesetzte SLAs
+  ### Modul 6&#58; Beschreiben von Azure-Kostenmanagement- und Service Level-Vereinbarungen
+  In diesem Modul erfahren Sie, wie man Azure-Kosten planen und verwalten und die richtigen Azure-Services über SLAs und den Servicelebenszyklus auswählen kann.
+  #### Lektionen
+  - Planen und verwalten Sie Ihre Azure-Kosten
+  - Wählen Sie die richtigen Azure-Services aus, indem Sie die SLAs und den Dienstlebenszyklus untersuchen
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Zugriff auf Azure Preview-Funktionen
-
-  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Verwenden Sie ein Azure-Abonnement.
-  - Kosten planen und verwalten.
-  - Beschreiben von Azure-SLAs.
-  - Erläutern der Azure-Servicelebenszyklen.
-
+  Nach Abschluss dieses Moduls Sie werden in der Lage sein&#58;
+  - Verwenden Sie den Rechner für die Gesamtbetriebskosten.
+  - Beschreiben der verschiedenen Möglichkeiten, wie Sie Azure-Produkte und -Services erwerben können.
+  - Verwenden Sie den Preisrechner, um die monatlichen Kosten für die Ausführung Ihrer Cloud-Workloads zu schätzen.
+  - Definieren Sie die Hauptfaktoren, die sich auf die Gesamtkosten auswirken, und wenden Sie empfohlene Vorgehensweisen an, um die Kosten zu minimieren.
+  - Beschreiben Sie, was ein Servicevertrag (SLA) ist und warum SLAs wichtig sind.
+  - Identifizieren Sie Faktoren wie die von Ihnen ausgewählte Serviceebene, die sich auf eine SLA auswirken können. 
+  - Kombinieren Sie SLAs, um eine zusammengesetzte SLA zu berechnen.
+  - Beschreiben Sie den Servicelebenszyklus in Azure.
