--- a/learn-certs-pr/courses/dp-060t00.yml
+++ b/learn-certs-pr/courses/dp-060t00.yml
@@ -26,8 +26,16 @@ summary: |-
   #### Zielgruppenprofil
   Die Hauptzielgruppe für diesen Kurs sind Datenbankentwickler, die planen, ihre MongoDB oder Cassandra DB Workloads mit Cosmos DB nach Azure zu migrieren.
 prerequisitesSection: |-
-  Zusätzlich zu ihrer Berufserfahrung sollten Kandidaten, die den Kurs besuchen, bereits über die folgenden technischen Kenntnisse verfügen&#58;
-  - Die grundlegenden Konzepte der Partitionierung, Replikation und Ressourcenverwaltung für die Erstellung und Konfiguration skalierbarer NoSQL-Anwendungen, die sich nicht an eine Cosmos DBAPI anlehnen.
+  Erfolgreiche Studenten beginnen diese Rolle mit grundlegenden Kenntnissen über Cloud-Computing-Konzepte und Berufserfahrung bei der Konfiguration von NoSQL-Anwendungen.
+
+  Insbesondere&#58;
+  - Die grundlegenden Konzepte der Partitionierung, Replikation und Ressourcenverwaltung zum Erstellen und Konfigurieren skalierbarer NoSQL-Anwendungen, die für die Cosmos DB-API nicht relevant sind.
+  - Erfahrung mit Azure, z. B. Bereitstellen und Verwalten von Ressourcen
+
+  Um diese Fähigkeiten zu erwerben, absolvieren Sie die folgende kostenlose Online-Schulung, bevor Sie an dem Kurs teilnehmen&#58; 
+  - [Azure Data Fundamentals](/learn/certifications/azure-data-fundamentals)
+  - [Kern-Cloud-Dienste - Azure-Rechenoptionen](/learn/modules/intro-to-azure-compute/)
+  - [Fallstudien&#58; NoSQL-Datenbanken und Speicherung von Cloud-Objekten](/learn/modules/cmu-case-study-nosql-databases/)
 outlineSection: |-
   ### Modul 1&#58; Aufbau global verteilter Anwendungen mit Cosmos DB
   Dieses Modul beschreibt die Vorteile und Architektur von Cosmos DB.
@@ -54,7 +62,7 @@ outlineSection: |-
   - Überlegungen zur Migration
 
 
-  #### Labor &#58; Migrieren von MongoDB Workloads auf Cosmos DB
+  #### Labor&#58; Migrieren von MongoDB Workloads auf Cosmos DB
   - Erstellen Sie ein Migrationsprojekt
   - Quelle und Ziel definieren
   - Migration durchführen
