--- a/learn-certs-pr/exams/az-300.yml
+++ b/learn-certs-pr/exams/az-300.yml
@@ -8,7 +8,7 @@ displayName: AZ-300
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Die englische Version dieser Prüfung wurde am 30. September 2020 eingestellt. Eine Ersatzprüfung, <a href="/learn/certifications/exams/az-303">AZ-303</a>, ist verfügbar. Lokalisierte Sprachprüfungen sind bis zum 30. Oktober 2020 verfügbar.</strong><br/><br/></div>
+  <div><strong>DIESE PRÜFUNG WURDE EINGESTELLT. Eine Ersatzprüfung, AZ-303, ist verfügbar. Weitere Informationen finden Sie auf der <a href="/learn/certifications/exams/az-303">Seite mit den AZ-303-Prüfungsdetails</a>.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit.
@@ -18,18 +18,10 @@ summary: |-
   Ein Azure Solution Architect arbeitet mit Cloud-Administratoren, Cloud-Datenbankadministratoren und Clients zusammen, um Lösungen zu implementieren.
 
   Ein Kandidat für dieses examens sollte über umfassende Erfahrung und Kenntnisse in verschiedenen Aspekten des IT-Betriebs verfügen, einschließlich Netzwerk, Virtualisierung, Identität, Sicherheit, Geschäftskontinuität, Notfallwiederherstellung, Datenmanagement, Budgetierung und Governance. Jemand in dieser Position sollte Entscheidungen in den einzelnen Bereichen steuern, die eine Gesamtlösung beeinflussen. Darüber hinaus sollte jemand in dieser Position mindestens eine dieser Azure-Knowledge-Domains beherrschen&#58; Verwaltung, Entwicklung oder DevOps.
-
-  <div><strong><br/>HINWEIS&#58; Sie erhalten die <a href="/learn/certifications/azure-solutions-architect">Microsoft Certified&#58; Azure Solutions Architect Expert</a> Zertifizierung, wenn Sie eine der folgenden Prüfungskombinationen bestehen&#58; <ul>
-  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> und <a href="/learn/certifications/exams/az-301">AZ-301</a></li>
-  <li><a href="/learn/certifications/exams/az-303">AZ-303</a> und <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
-  <li><a href="/learn/certifications/exams/az-300">AZ-300</a> und <a href="/learn/certifications/exams/az-304">AZ-304</a></li>
-  <li><a href="/learn/certifications/exams/az-301">AZ-301</a> und <a href="/learn/certifications/exams/az-303">AZ-303</a></li>
-  </ul></strong></div>
 subTitle: 'dieses examens misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Bereitstellen und Konfigurieren der Infrastruktur, Implementieren von Workloads und Sicherheit, Erstellen und Bereitstellen von Anwendungen, Implementieren von Authentifizierungen und sicheren Daten, und Entwickeln für die Cloud- und Azure-Speicher.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VzwB
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-300?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-300&examname=Exam%20AZ-300:%20Microsoft%20Azure%20Architect%20Technologies&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-300
 locales:
 - ja
 - zh-cn
@@ -37,12 +29,12 @@ locales:
 levels:
 - advanced
 skills:
-- Die englische Version dieser Prüfung wurde am 30. September 2020 eingestellt. Eine Ersatzprüfung, AZ-303, ist verfügbar. Lokalisierte Sprachprüfungen sind bis zum 30. Oktober 2020 verfügbar. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, sich geändert hat.
 - Bereitstellung und Konfiguration der Infrastruktur (40-45%)
 - Implementierung von Workloads und Sicherheit (25-30%)
 - Erstellen und Bereitstellen von Apps (5-10%)
 - Implementierung von Authentifizierung und sicheren Daten (5-10%)
 - Entwickeln für die Cloud und für Azur-Speichermedien (15-20%)
+retirementDate: 09/30/2020
 roles:
 - solution-architect
 products:
