--- a/learn-certs-pr/exams/az-304.yml
+++ b/learn-certs-pr/exams/az-304.yml
@@ -6,7 +6,10 @@ metadata:
 uid: exam.az-304
 displayName: AZ-304
 summary: |-
+  <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  </div>
 
   Kandidaten für diese Prüfung sollten über Fachkenntnisse beim Entwerfen und Implementieren von Lösungen verfügen, die unter Microsoft Azure ausgeführt werden, einschließlich Aspekten wie Computer, Netzwerk, Speicher und Sicherheit.
 
@@ -22,9 +25,13 @@ practiceTestUrl: https://www.mindhub.com/p/MU-AZ-304?utm_source=microsoft&utm_me
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-304&examname=Exam%20AZ-304:%20Microsoft%20Azure%20Architect%20Design&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-304
 locales:
 - en
+- ja
+- zh-cn
+- ko
 levels:
 - advanced
 skills:
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
 - Design monitoring (10-15%)
 - Design identity and security (25-30%)
 - Design data storage (15-20%)
