--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -6,8 +6,8 @@ metadata:
 uid: exam.az-400
 displayName: AZ-400
 summary: |-
-  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 15. Juni 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien haben, um kontinuierlich geschäftlichen Nutzen zu erzielen.
@@ -28,7 +28,7 @@ locales:
 levels:
 - advanced
 skills:
-- 'Der Inhalt dieser Prüfung wurde am 15. Juni 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.'
+- 'Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.'
 - Entwickeln Sie eine Instrumentierungsstrategie (5-10%)
 - Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie (5-10%)
 - Entwicklung eines Sicherheits- und Compliance-Plans (10-15%)
