--- a/learn-certs-pr/exams/mb-220.yml
+++ b/learn-certs-pr/exams/mb-220.yml
@@ -8,15 +8,15 @@ displayName: MB-220
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 7. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind Dynamics 365 Customer Engagement Funktionsberater mit Marketingexpertise. Die Kandidaten sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omnichannel-Messaging standardisieren und Marketinginformationen liefern.
+  Kandidaten für diese Prüfung sind funktionale Berater für Dynamics 365 Marketing. Die Teilnehmer sind dafür verantwortlich, Lösungen zu implementieren, die Leads gewinnen und konvertieren, Markenbekanntheit aufzubauen, Omnichannel-Messaging zu standardisieren und Marketinginformationen zu liefern.
 
   Die Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernmarketinganwendung um E-Mail-Marketing, Einrichtung, interaktive Kundenreisen, Leads mit personalisierten Erfahrungen, LinkedIn-Integration, Events, Voice of the Customer, Landing Pages, Segmentierung und Scoring sowie die Einhaltung der Allgemeinen Datenschutzverordnung (GDPR).
 
-  Die Bewerber sollten über einige Kenntnisse der Marketingprinzipien und der Rolle der Marketinganwendung in Bezug auf die Dynamics 365 Anwendungssuite verfügen, einschließlich der Integration mit Dynamics 365 und Office 365 Anwendungen. Die Kandidaten sollten die Terminologie der Branche, Prioritäten, gemeinsame Initiativen, Standards, Methoden und bewährte Verfahren verstehen.
-subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Marketinganwendungen, Verwalten von Segmenten und Listen, Erstellen und Verwalten von Marketingformen und -seiten, Verwalten von Leads, Erstellen und Verwalten von Marketing-E-Mails, Customer-Journey-Management, Verwalten von Veranstaltungen und Webinaren sowie Konfigurieren und Analysieren von Kundenantworten.'
+  Kandidaten sollten über Kenntnisse der Marketingprinzipien und der Rolle der Marketinganwendung in Bezug auf die Microsoft Dynamics 365 Anwendungssuite verfügen, einschließlich der Integration von Microsoft Dynamics 365 und Office 365 Anwendungen.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgaenden technischen Aufgaben zu erfüllen: Konfigurieren von Marketinganwendungen; Segmente und Listen verwalten; Erstellen und Verwalten von Marketingformularen und -seiten; Leads, Kontakte und Konten verwalten; Erstellen und Verwalten von Marketing-E-Mails; Kundenreisen verwalten; Veranstaltungen und Webinare verwalten; und Dynamics 365 Customer Voice konfigurieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjQ
 practiceTestUrl: https://in.mindhub.com/mb-220-microsoft-dynamics-365-marketing-microsoft-official-practice-test/p/MU-MB-220?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,15 +26,15 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 7. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Konfigurieren von Marketinganwendungen (5-10%)
-- Segmente und Listen verwalten (10-15%)
+- Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Konfigurieren von Marketinganwendungen (20-25%)
+- Segmente und Listen verwalten (5-10%)
 - Marketingformulare und Seiten erstellen und verwalten (10-15%)
-- Leads verwalten (10-15%)
-- Erstellen und Verwalten von Marketing-E-Mails (10-15%)
-- Kunden-Journeys verwalten (15-20%)
-- Verwaltung von Veranstaltungen und Webinaren (10-15%)
-- Konfigurieren und Analysieren von Kundenreaktionen (10-15%)
+- Verwalten von Leads, Kontakten und Konten (10-15%)
+- Erstellen und Verwalten von Marketing-E-Mails (5-10%)
+- Kunden-Journeys verwalten (10-15%)
+- Verwaltung von Veranstaltungen und Webinaren (5-10%)
+- Dynamics 365 Customer Voice konfigurieren (10-15%)
 roles:
 - functional-consultant
 products:
@@ -55,7 +55,7 @@ relatedCertifications:
 resources:
 - title: Lernpfad zur Zertifizirung
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C55m
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjW
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
