--- a/learn-certs-pr/exams/mb-240.yml
+++ b/learn-certs-pr/exams/mb-240.yml
@@ -8,15 +8,15 @@ displayName: MB-240
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wird am 7. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind Microsoft Dynamics 365 Customer Engagement Funktionsberater mit Field Service Expertise. Die Kandidaten sind für die Implementieren von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes abschließen.
+  Kandidaten für diese Prüfung sind Dynamics 365-Berater für Kundenbindung mit Fachkenntnissen im Außendienst. Die Teilnehmer sind für die Implementierung von Lösungen verantwortlich, die Ressourcen verwalten, die den Lebenszyklus des Außendienstes vervollständigen.
 
-  Die Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Field Service-Anwendung, die Bereitstellung der Connected Field Service (IoT)-Lösung und der mobilen Anwendung sowie die Implementieren zusätzlicher notwendiger Anpassungen. Die Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
+  Kandidaten implementieren die Außendienstprozesse, die in Zusammenarbeit mit internen und externen Teams konzipiert wurden. Diese Zusammenarbeit umfasst die Konfiguration der Standard-Administrationsbereiche der Außendienst-Anwendung, die Bereitstellung der angeschlossenen Außendienst (IoT)-Lösung und der mobilen Anwendung sowie die Implementierung zusätzlicher notwendiger Anpassungen. Kandidaten sind für die Konfiguration und den Einsatz der Außendienstanwendung in Verbindung mit der zentralen Kundendienstanwendung verantwortlich.
 
   Die Kandidaten müssen über Kenntnisse in der Konfiguration und Anpassung von Komponenten der Außendienstanwendung verfügen, einschließlich der Konfiguration von Diensten, Ressourcen, Merkmalen, Vorfällen, Bestandsintegration, Servicevereinbarungen, Ressourcenplanung, Arbeitsaufträgen, Serviceaufgaben, Benutzerrollen im Außendienst, Außendiensteinstellungen, der Lösung Connected Field Service (IoT) und der Konfiguration der Field Service Mobile App.
-subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfigurieren von Außendienstanwendungen, Verwalten von Arbeitsaufträgen, Planen und Versenden von Arbeitsaufträgen, Verwalten der Mobilität im Außendienst, Verwalten von Bestand und Einkauf sowie Verwalten von Anlagen und Vereinbarungen.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Konfigurieren von Außendienstanwendungen; Arbeitsaufträge verwalten; Arbeitsaufträge planen und versenden; Verwaltung der Mobilität vor Ort; Inventar und Einkauf verwalten; und angeschlossenen Außendienst implementieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxi
 practiceTestUrl: https://in.mindhub.com/mb-240-microsoft-dynamics-365-field-service-microsoft-official-practice-test/p/MU-MB-240?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,13 +26,13 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wird am 7. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Konfigurieren von Außendienstanwendungen (20-25%)
+- Der Inhalt dieser Prüfung wird am 10. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
+- Außendienstanwendungen konfigurieren (15-20%)
 - Verwaltung von Arbeitsaufträgen (15-20%)
-- Planen und Versenden von Arbeitsaufträgen (20-25%)
+- Arbeitsaufträge planen und versenden (25-30%)
 - Verwaltung der Mobilität im Außendienst (10-15%)
-- Verwaltung von Bestand und Einkauf (10-15%)
-- Verwaltung von Vermögenswerten und Vereinbarungen (10-15%)
+- Inventar und Einkauf verwalten (5-10%)
+- Den angeschlossenen Außendienst implementieren (10-15%)
 roles:
 - functional-consultant
 products:
@@ -51,7 +51,7 @@ relatedCertifications:
 resources:
 - title: Lernpfad zur Zertifizirung
   description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C7Ft
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4C56X
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
