--- a/learn-certs-pr/exams/mb-800.yml
+++ b/learn-certs-pr/exams/mb-800.yml
@@ -16,10 +16,11 @@ summary: |-
 
   Kandidaten für diese Prüfung sind normalerweise auf einen oder mehrere Funktionssätze von Business Central spezialisiert. Sie verstehen die Rolle von Business Central in Bezug auf die Dynamics 365-Anwendungssuite.
 
-  <div><strong><br/>Hinweis&#58; Dieses examens wird am oder um den 6. Oktober 2020 verfügbar sein.</strong></div>
-subTitle: 'Dieses examens wird am oder um den 6. Oktober 2020 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Einrichten von Business Central; Finanzdaten konfigurieren; Verkauf und Einkauf konfigurieren; und Business Central-Vorgänge ausführen.'
+  <div><strong><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr <a href="/learn/certifications/certification-exams#participating-in-beta-exams">über den Wert und die Bedeutung von Beta-Prüfungen</a></strong></div>
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Einrichten von Business Central; Finanzdaten konfigurieren; Verkauf und Einkauf konfigurieren; und Business Central-Vorgänge ausführen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CxSE
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-800&examname=Exam%20MB-800:%20Microsoft%20Dynamics%20365%20Business%20Central%20Functional%20Consultant&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-800
 locales:
 - en
 levels:
@@ -51,12 +52,15 @@ relatedCertifications:
 - related:
     uid: certification.d365-business-central-functional-consultant-associate
 resources:
+- title: Lernpfad zur Zertifizirung
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4GHuX
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
 - title: Zertifizierungsposter
   description: Verschaffen Sie sich einen Überblick über die Grundlagen, aufgabenbasierte und fachliche Zertifizierungen.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
 - title: Prüfungswiederholung
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
