--- a/learn-certs-pr/exams/ms-203.yml
+++ b/learn-certs-pr/exams/ms-203.yml
@@ -6,7 +6,10 @@ metadata:
 uid: exam.ms-203
 displayName: MS-203
 summary: |-
+  <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
+  </div>
 
   Kandidaten für dieses examens sind Messaging-Administratoren, die Empfänger, Berechtigungen, E-Mail-Schutz, E-Mail-Fluss und öffentliche Ordner in Hybrid- und Cloud-Unternehmensumgebungen bereitstellen, konfigurieren, verwalten, Fehler beheben und überwachen.
 
@@ -18,12 +21,14 @@ summary: |-
 subTitle: 'In dieser Prüfung wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Organisationseinstellungen und Ressourcen; Planen und Verwalten der Mail-Architektur; Planen und Implementieren einer hybriden Konfiguration und Migration und Sichern der Messaging-Umgebung. '
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4xqnc
+practiceTestUrl: https://in.mindhub.com/ms-203-microsoft-365-messaging-microsoft-official-practice-test/p/MU-MS-203?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-203&examname=Exam%20MS-203:%20Microsoft%20365%20Messaging&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-203
 locales:
 - en
 levels:
 - intermediate
 skills:
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
 - Verwalten organisatorischer Einstellungen und Ressourcen (30-35%)
 - Planen und verwalten der Mail-Architektur (20-25%)
 - Planen und Implementieren einer Hybrid- Konfiguration und Migration (20-25%)
