--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -6,8 +6,8 @@ metadata:
 uid: exam.ms-700
 displayName: MS-700
 summary: |-
-  <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 28. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind Microsoft Teams Administratoren in Unternehmen. Der Microsoft Teams Administrator konfiguriert, implementiert und verwaltet Office 365-Workloads für Microsoft Teams, die sich auf eine effiziente und effektive Zusammenarbeit und Kommunikation in einer Unternehmensumgebung konzentrieren.
@@ -31,9 +31,9 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 28. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 24. November 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich ändern wird.
 - Planen und Konfigurieren einer Microsoft-Teamumgebung (45 -50%)
-- Verwalten von Chats, Anrufen und Meetings (30 -35%)
+- Verwalten von chats, Anrufen und meetings (30 -35%)
 - Verwalten von Team- und App-Richtlinien (20 -25%)
 roles:
 - administrator
